--- a/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_South_Africa_l_english.yml
@@ -374,8 +374,8 @@ saf.15.d:0 "We have been contacted by the South African government which, due to
 saf.15.a:0 "Yes, we welcome trade with the South Africans..."
 saf.15.b:0 "No! Traitors!"
 saf.16.t:0 "Détente with the South Africans"
-saf.16.d:0 "The [From.GetAdjective] government has decided to normalise trade relations with South Africa, owing to the former British colony's recent economic crisis and almost certainly at their request. [From.GetNameDef] has asked that [Root.GetNameDef] follow suit, to encourage investors from across the Entente in seeking out South African opportunities."
-saf.16.a:0 "Came back with their tain between their legs, hm?"
+saf.16.d:0 "The [From.GetAdjective] government has decided to normalise trade relations with South Africa, owing to the former British colony's recent economic crisis and almost certainly at their request. [From.GetNameDefCap] has asked that [Root.GetNameDef] follow suit, to encourage investors from across the Entente in seeking out South African opportunities."
+saf.16.a:0 "Came back with their tail between their legs, hmm?"
 saf.17.t:0 "The Canadians Agree!"
 saf.17.d:0 "The Canadians have agreed to re-open relations with us, and to invest in our country. Other Entente nations are almost certainly to now follow suit!"
 saf.17.a:0 "만세!"
@@ -495,7 +495,7 @@ saf.69.d:0 "The former British dominion of South Africa has descended into chaos
 saf.69.a:0 "Send aid to the Federationists!"
 saf.69.b:0 "Remain silent on South African affairs"
 saf.70.t:0 "[From.GetAdjective]의 지원이 도착하다"
-saf.70.d:0 "[From.GetNameDefCap], desiring our victory in this conflict, have sent us aid in the form of weapons and supplies. In addition to this, many volunteers and technical experts have joined our own soldiers facing against the Afrikaner Nationalists."
+saf.70.d:0 "[From.GetNameDefCap], desiring our victory in this conflict, have sent us aid in the form of weapons and supplies. In addition to this, many volunteers and technical experts have joined our own soldiers facing against our enemies."
 saf.70.a:0 "환상적이야!"
 saf.71.t:0 "4차 보어 전쟁의 끝"
 saf.71.d:0 "For good or ill, the Fourth Boer War is now over. The General Staff have reported that they learnt many valuable lessons regarding the nature of modern warfare over the course of the conflict."
