--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -93,9 +93,9 @@ l_english:
  STATE_91:0 "리비우"
  STATE_92:0 "루블린"
  STATE_93:0 "브레스트"
- STATE_94:0 "바라나비치"
- STATE_95:0 "나바흐루다크"
- STATE_96:0 "모길료프"
+ STATE_94:0 "슬로님"
+ STATE_95:0 "노보흐루도크"
+ STATE_96:0 "마힐료우"
  STATE_97:0 "비아위스토크"
  STATE_98:0 "프워츠크"
  STATE_99:0 "유틀란트"
@@ -205,7 +205,7 @@ l_english:
  STATE_203:0 "체르카시"
  STATE_204:0 "핀스크"
  STATE_205:0 "칼루가"
- STATE_206:0 "민스크"
+ STATE_206:0 "몐스크"
  STATE_207:0 "오르샤"
  STATE_208:0 "루가"
  STATE_209:0 "프스코프"
@@ -929,7 +929,7 @@ l_english:
  STATE_927:0 "카메룬"
  STATE_928:0 "콩고바르트슈타트"
  STATE_929:0 "웨스트버지니아"
- STATE_930:0 "델마바"
+ STATE_930:0 "델라웨어"
  STATE_931:0 "코네티컷"
  STATE_932:0 "메사추세츠"
  STATE_933:0 "버몬트"
@@ -940,7 +940,7 @@ l_english:
  STATE_938:0 "셰틀랜드"
  STATE_939:0 "오크니"
  STATE_940:0 "올리벤사"
- STATE_941:0 "도이치사모아"
+ STATE_941:0 "독일령 사모아"
  STATE_942:0 "포어아를베르크"
  STATE_943:0 "오트사부아"
  STATE_944:0 "하라르"
@@ -974,7 +974,7 @@ l_english:
  STATE_972:0 "남동 노이카메룬"
  STATE_973:0 "남 노이카메룬"
  STATE_974:0 "우방기"
- STATE_975:0 "도이치차드"
+ STATE_975:0 "독일령 차드"
  STATE_976:0 "카사이"
  STATE_977:0 "키부"
 STATE_978:0 "림뷔르흐"
@@ -1079,3 +1079,7 @@ STATE_1076:0 "남부 마케도니아"
 STATE_1077:0 "신트마르턴"
 STATE_1078:0 "마바루마"
 STATE_1079:0 "마바루마 우림"
+STATE_1080:0 "압하지야"
+STATE_1081:0 "자가탈라"
+STATE_1082:0 "로리"
+STATE_1083:0 "쿠물"
