--- a/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
@@ -36,7 +36,7 @@ l_english:
  STRATEGICREGION_36:0 "그린란드"
  STRATEGICREGION_37:0 "발틱 국가"
  STRATEGICREGION_38:1 "폴란드"
- STRATEGICREGION_39:1 "벨라루스"
+ STRATEGICREGION_39:1 "벨로루시"
  STRATEGICREGION_40:1 "트란스볼가"
  STRATEGICREGION_41:1 "이베리아 반도"
  STRATEGICREGION_42:0 "비스케이 만"
@@ -118,9 +118,9 @@ l_english:
  STRATEGICREGION_118:0 "서해안"
  STRATEGICREGION_119:1 "남서"
  STRATEGICREGION_120:2 "중서부"
- STRATEGICREGION_121:0 "동부 캐나다"
+ STRATEGICREGION_121:0 "온타리오"
  STRATEGICREGION_122:0 "서부 캐나다"
- STRATEGICREGION_123:0 "멕시코"
+ STRATEGICREGION_123:0 "중부 멕시코"
  STRATEGICREGION_124:0 "베네수엘라"
  STRATEGICREGION_125:0 "남동부 브라질"
  STRATEGICREGION_126:0 "북아프리카"
@@ -183,7 +183,7 @@ l_english:
  STRATEGICREGION_183:0 "중부 캐나다"
  STRATEGICREGION_184:0 "캐타나 극지방"
  STRATEGICREGION_185:0 "북서"
- STRATEGICREGION_186:1 "북-서"
+ STRATEGICREGION_186:1 "뉴잉글랜드"
  STRATEGICREGION_187:0 "아라비아"
  STRATEGICREGION_188:0 "동 아프리카"
  STRATEGICREGION_189:0 "마그레브"
@@ -220,3 +220,16 @@ l_english:
  STRATEGICREGION_220:0 "서북 지역"
  STRATEGICREGION_221:0 "신장"
  STRATEGICREGION_222:0 "내몽골"
+ STRATEGICREGION_223:0 "마르마라해"
+STRATEGICREGION_224:1 "남부 멕시코"
+STRATEGICREGION_225:1 "북부 멕시코"
+STRATEGICREGION_226:1 "중부 대서양"
+STRATEGICREGION_227:1 "디프사우스"
+STRATEGICREGION_228:1 "대평원"
+STRATEGICREGION_229:1 "텍사스"
+STRATEGICREGION_230:1 "오대호"
+STRATEGICREGION_231:1 "강철 벨트"
+STRATEGICREGION_232:1 "동부 캐나다"
+STRATEGICREGION_233:1 "애팔래치아"
+STRATEGICREGION_234:0 "아르한겔스크"
+STRATEGICREGION_235:0 "중부 시베리아"
