--- a/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bulgaria_l_english.yml
@@ -568,35 +568,35 @@ bulgaria.85.d:0 "Shocking news has just arrived from the [Root.GetAdjective] del
 bulgaria.85.a:0 "망할 놈들."
 
 bulgaria.86.t:0 "[BUL.GetName]이(가) 에디르네를 점령하다!"
-bulgaria.86.d:0 "During our darkest hour, it seems as though [BUL.GetName] has decided to take advantage of our precarious situation and have moved into Edirne, claiming the state as "rightful [BUL.GetAdjective] territory". What shall we do?"
+bulgaria.86.d:0 "우리의 가장 어두운 시간 동안 [BUL.GetName]이(가) 우리의 불안정한 상황을 이용하기로 결정하고 도시를 "정당한 [BUL.GetAdjective]의 영역" 이라고 주장하며 에디르네로 이동하기로 결정했습니다. 우리는 무엇을 해야 할까요?"
 bulgaria.86.a:0 "그들을 공격하라!"
 bulgaria.86.b:0 "아직은 때가 아니다..."
 
 bulgaria.87.t:0 "아드리아노플 권력 통합"
-bulgaria.87.d:0 "Thankfully, after months of occupation, it seems as though the citizens within Adrianople have finally accepted the new political realities and are willing to become [BUL.GetAdjective] citizens. In addition, we have received much help from our soldiers, who have helped pacify the most vocal of our opposition."
+bulgaria.87.d:0 "다행히도, 몇 달 간의 점령 끝에, 아드리아노플의 시민들은 마침내 새로운 정치 현실을 받아들이고 기꺼이 [BUL.GetAdjective]의 국민이 될 것 같습니다. 게다가, 우리는 반대파의 목소리를 가라 앉히는데 도움을 준 군인들에게 많은 도움을 받았습니다."
 bulgaria.87.a:0 "완벽하군."
 
 bulgaria.88.t:0 "[BUL.GetName]이(가) 콘스탄티노플을 점령하다!"
-bulgaria.88.d:0 "During our darkest hour, it seems as though [BUL.GetName] has decided to take advantage of our precarious situation and have moved into Constantinople, our capital, claiming the city as "rightful [BUL.GetAdjective] territory". In addition, in his hubris, the Bulgarian Tsar, [BUL.GetLeader] has renamed the city to Tsarigrad! What shall we do?"
+bulgaria.88.d:0 "우리의 가장 어두운 시간 동안 [BUL.GetName]이(가) 우리의 불안정한 상황을 이용하기로 결정하고 도시를 "정당한 [BUL.GetAdjective]의 영역" 이라고 주장하며 우리의 수도인 콘스탄티노플로 이동하기로 결정했으며, 자만심에 가득찬 불가리아의 차르는 도시 이름을 차르그라드로 바꾸었습니다! 우리는 무엇을 해야 할까요?"
 bulgaria.88.a:0 "그들을 공격하라!"
 bulgaria.88.b:0 "아직은 때가 아니다..."
 
 bulgaria.89.t:0 "새로운 차르"
-bulgaria.89.d:0 "Today is both a joyous and melancholic day for all [Root.GetAdjective]s as Tsar Ferdinand I has been found dead due to natural causes. Those who had had the pleasure of visiting him in his last moments noted how proud and full of joy he was to have brought [Root.GetName] to its zenith and had successfully maintained the [Root.GetAdjective] hegemony within the Balkans.\n\nThe late Tsar's death saw the ascension of his son, who was crowned Tsar Boris III, which was a momentous occasion for all [Root.GetAdjective]s. Beloved by many, the new Tsar has promised to bring great change to [Root.GetName] and has stated that..."
+bulgaria.89.d:0 "차르 페르디난드가 자연사한 오늘, 모든 [Root.GetAdjective]에 대해 즐거우면서도 우울한 날이 되었습니다. 그의 마지막 순간에 그를 방문하는 즐거움을 가졌던 사람들은 [Root.GetName]이(가) 발칸 반도 내에서 [Root.GetAdjective] 헤게모니를 성공적으로 유지 한 것에 대해 얼마나 자랑스럽고 기쁨이 가득했는지에 주목했습니다. 차르의 죽음으로 그의 아들 보리스 3세가 왕관을 썼는데, 이것은 모두에게 중대한 사건이었습니다. 많은 이들의 사랑을 받고 있는 새 차르는 [Root.GetName]에 큰 변화를 가져올 것을 약속했으며 그 사실은..."
 bulgaria.89.a:0 "... 국민은 더 자유로워질 것이다."
 bulgaria.89.b:0 "... 국민은 더 자유로워질 것이다."
 bulgaria.89.c:0 "... 국민은 차르의 지도 하에 있어야 한다."
 
 bulgaria.90.t:0 "절대론자 쿠데타!"
-bulgaria.90.d:0 "It seems as though the policy of our party to work towards restrengthening and rebuilding the Bulgarian state has not been enough. Against our will, the Absolutist Faction has deposed prominent politicians from our party and have begun to occupy key positions and institutions within the [Root.GetAdjective] government. While many see this as a mere power grab, most of our citizens are too sick of conflict and internal strife to truly do anything about it. It seems as though we have been forced out of the government, made to give up power, against our own will..."
+bulgaria.90.d:0 "불가리아를 재건하기 위한 우리 당의 정책이 충분하지 않았던 것처럼 보입니다. 우리의 의지와는 달리, 절대론자들은 저명한 정치인들을 우리 당으로부터 배제하고 [Root.GetAdjective] 정부 내의 핵심 직책과 기관을 점령하기 시작했습니다. 많은 이들이 단순한 권력 장악으로 간주하지만 대부분의 국민들은 갈등과 내부 투쟁에 지장이 없기 때문에 진정으로 그것에 대해 아무것도 할 수 없습니다. 마치 우리가 정부를 떠나서 우리의 의지에 반하여 권력을 포기한 것처럼 보입니다."
 bulgarai.90.a:0 "어떻게 이런 일이..."
 
 bulgaria.91.t:0 "좁은 사회주의자 쿠데타!"
-bulgaria.91.d:0 "It seems as though the policy of our party to work towards restrengthening and rebuilding the Bulgarian state has not been enough. Against our will, the Narrow Socialists have deposed prominent politicians from our party and have begun to occupy key positions and institutions within the [Root.GetAdjective] government. While many see this as a mere power grab, most of our citizens are too sick of conflict and internal strife to truly do anything about it. It seems as though we have been forced out of the government, made to give up power, against our own will..."
+bulgaria.91.d:0 "불가리아를 재건하기 위한 우리 당의 정책이 충분하지 않았던 것처럼 보입니다. 우리의 의지와는 달리, 좁은 사회주의자들은 저명한 정치인들을 우리 당으로부터 배제하고 [Root.GetAdjective] 정부 내의 핵심 직책과 기관을 점령하기 시작했습니다. 많은 이들이 단순한 권력 장악으로 간주하지만 대부분의 국민들은 갈등과 내부 투쟁에 지장이 없기 때문에 진정으로 그것에 대해 아무것도 할 수 없습니다. 마치 우리가 정부를 떠나서 우리의 의지에 반하여 권력을 포기한 것처럼 보입니다."
 bulgaria.91.a:0 "어떻게 이런 일이..."
 
 bulgaria.92.t:0 "독일인들을 돕다!"
-bulgaria.92.d:0 "It seems as though the Second Weltkrieg, a war that many international observers and even participants have predicted to be the biggest conflict ever seen in Europe, could not have been avoided. As it stands, we must turn our gaze towards international affairs and take a stance and aid those we consider to be our allies..."
+bulgaria.92.d:0 "많은 국제 관찰자들과 심지어 참가자들까지도 유럽에서 볼 수 있는 가장 큰 분쟁이 될 것으로 예측했던 제 2차 세계대전을 피할 수 없었던 것처럼 보입니다. 지금 상태로는 국제 문제에 눈을 돌려서 동맹국이라고 생각하는 사람들을 도와야만 합니다."
 bulgaria.92.a:0 "[GER.GetAdjective]을(를) 지원하라!"
 bulgaria.92.b:0 "[RUS.GetAdjective]와(과) 함께 하자!"
 bulgaria.92.c:0 "[AUS.GetNameDef]에 가입하자!"
@@ -604,36 +604,36 @@ bulgaria.92.e:0 "[FRA.GetNameDef]와(과) 함께 싸우자!"
 bulgaria.92.f:0 "아마도 이 갈등에 휘말리지 않는 것이 최선일 것이다."
 
 bulgaria.93.t:0 "[BUL.GetName]와(과)의 동맹?"
-bulgaria.93.d:0 "Apparently, it seems as though the [BUL.GetAdjective]s have decided to petition us for an alliance, firmly stating that they would like to assist us in our war against our enemies. While it would be helpful to take on the [BUL.GetAdjective]s as allies, they could also be a potential hinderance and accepting them may even weaken our international prestige. What say we?"
+bulgaria.93.d:0 "분명히, [BUL.GetAdjective]이(가) 우리를 원수와의 전쟁에서 도와 주겠다는 확고한 동맹을 맺기로 결정한 것처럼 보입니다. [BUL.GetAdjective]을(를) 동맹국으로서 두는 것이 도움이 될 수 있지만 잠재적으로 방해가 될 수도 있으며 이들을 받아들이면 국제적인 명성을 약화시킬 수도 있습니다. 어떻게 할까요?"
 bulgaria.93.a:0 "우리는 그들의 도움이 필요하다."
 bulgaria.93.b:0 "우리는 그들없이도 해낼 수 있다."
 
 bulgaria.94.t:0 "[From.GetNameDefCap]이(가) 수락하다!"
-bulgaria.94.d:0 "Wonderful news has just arrived from the [Root.GetAdjective] delegation: apparently, [From.GetNameDef] have decided to accept our offer of an alliance, claiming that the current state of affairs within Europe and the rest of the world is uncertain enough that an alliance for the mutual security of our nations would be beneficial."
+bulgaria.94.d:0 "멋진 소식이 방금 [Root.GetAdjective] 대표단으로부터 도착했습니다. [From.GetNameDef]은(는) 유럽 및 다른 국가의 현재 상황이 충분히 불확실하다고 주장하면서 동맹 제안을 수락하기로 결정했습니다. 우리 국가의 상호 안보를 위한 이 동맹은 유익할 것입니다."
 bulgaria.94.a:0 "우리 [From.GetAdjective] 친구들에게 건배!"
 
 bulgaria.95.t:0 "[From.GetNameDefCap]이(가) 거절하다!"
-bulgaria.95.d:0 "Shocking news has just arrived from the [Root.GetAdjective] delegation: apparently, [From.GetNameDef] have decided to reject our offer of an alliance, citing that the current atmosphere does not justify the international scrutiny that will be placed upon [From.GetName] if they were to accept us into our alliance."
+bulgaria.95.d:0 "충격적인 소식이 방금 [Root.GetAdjective] 대표단으로부터 도착했습니다. 현재의 분위기가 우리를 동맹국으로 받아들이면 [From.GetName]에 놓여질 국제 조사를 정당화하지 못한다고 언급했습니다."
 bulgaria.95.a:0 "망할 놈들."
 
 bulgaria.96.t:0 "[From.GetName]이(가) 에디르네를 요구하다!"
-bulgaria.96.d:0 "The treacherous [From.GetAdjective]s have seen fit to demand Edirne, a core state of [Root.GetNameDef]. It seems as though they are eager to prove their worth and power on the world stage and have taken to threatening us to give them the state, or face consequences. We can simply call their bluff and refuse to hand over the state, which is what most are recommending, yet the prospect of war is not one that the people of [Root.GetNameDef] would like to face. Whats say we?"
+bulgaria.96.d:0 "믿을 수 없는 [From.GetAdjective]은(는) [Root.GetNameDef]의 핵심 주인 에디르네를 요구하는데 적합한 것으로 보입니다. 그들은 세계 무대에서 자신들의 가치와 권력을 증명하고 싶어하며, 그들에게 주를 주거나 결과에 직면하도록 우리를 협박하는 것처럼 보입니다. 우리는 간단히 이 허세에 대해 주를 넘겨줄 것을 거부할 수 있으며, 이가 대부분 권장하는 것이지만, 전쟁의 전망은 [Root.GetNameDef]의 사람들이 직면하고 싶어하는 것이 아닙니다. 어떻게 할까요?"
 bulgaria.96.a:0 "우리는 결코 포기하지 않을 것이다!"
 bulgaria.96.b:0 "우리는 선택의 여지가 없다..."
 
 bulgaria.97.t:0 "[From.GetNameDefCap]이(가) 우리의 요구를 거절하다!"
-bulgaria.97.d:0 "It seems as though [From.GetNameDef] has seen fit to refuse our demands and has stated that Adrianople is an [From.GetAdjective] state, not a [Root.GetAdjective] one. While waging war against [From.GetNameDef] is nothing to be taken lightly, it is also clear that we may face a loss of prestige on the world stage if we were to renege on our promise of war. What course of action should we take?"
+bulgaria.97.d:0 "[From.GetNameDef]이(가) 우리의 요구를 거부하는 데 적합하다고 생각하고 에디르네가 [Root.GetAdjective]가 아닌 [From.GetAdjective]의 영토라고 말한 것처럼 보입니다. [From.GetNameDef]에 대한 전쟁을 수행하는 것은 가볍게 받아들일 수 없으며, 우리가 전쟁에 대한 우리의 약속을 어기면 세계 무대에서의 위신 상실에 직면할 수도 있다는 것도 명백합니다. 우리는 어떤 행동을 취해야 할까요?"
 bulgaria.97.a:0 "그들과의 전쟁을 선언하라!"
 bulgaria.97.b:0 "우리는 때가 왔을 때 그들을 공격해야 한다..."
 
 bulgaria.98.t:0 "[From.GetNameDefCap]이(가) 동의하다!"
-bulgaria.98.d:0 "The weak and decrepit [From.GetName] has proved themselves worthy of their moniker, the Sick Man of Europe. It seems as though even they were unable to resist the threat of a [Root.GetAdjective] threat and have begun the transfer of Adrianople to [Root.GetAdjective] hands."
+bulgaria.98.d:0 "약하고 쇠약해진 [From.GetName]은(는) 자신의 이름인 "유럽의 병자" 에 합당한 것으로 입증되었습니다. 그들은 [Root.GetAdjective]의 위협에 저항할 수 없어 보이며 에디르네는 [Root.GetAdjective]의 손으로 이양되기 시작했습니다."
 bulgaria.98.a:0 "훌륭해!"
 
-bulgaria.99.t:0 "[BUL.GetNameDefCap] Has Been Occupied! Should We End the War?"
-bulgaria.99.d:0 "It seems as though the soldiers of our enemies have thoroughly occupied [BUL.GetName], reducing the once powerful nation to naught and quieting major resistance. Public opinion in [Root.GetNameDef] is beginning to turn against the war, with many advocating for peace due to the war dragging on for such an extended period. Shall we seek peace, or can we continue the fight?"
-bulgaria.99.a:0 "Yes, this war has dragged on for far too long."
-bulgaria.99.b:0 "No, we must fight for our [BUL.GetAdjective] brothers!"
+bulgaria.99.t:0 "[BUL.GetNameDefCap]이(가) 점령되다! 전쟁을 끝내야 할까?"
+bulgaria.99.d:0 "적군의 병력들이 철저하게 한 때 강대국이었던 국가를 무력화시키고 주요 저항을 잠재우도록 만들어 [BUL.GetName]을(를) 점령한 것처럼 보입니다.[Root.GetNameDef]의 여론은 전쟁으로 인해 평화를 옹호하는 많은 사람들이 전쟁을 반대하기 시작했습니다. 우리는 평화를 찾아야 할까요, 아니면 계속 맞서 싸워야 할까요?"
+bulgaria.99.a:0 "그래, 이 전쟁을 너무 오래 끌어왔다."
+bulgaria.99.b:0 "아니, 우리는 [BUL.GetAdjective]의 형제들을 위해 맞서 싸워야만 한다!"
 
 bulgariaflavour.1.t:0 "불가리아 농업 연합 피켓!"
 bulgariaflavour.1.d:0 "검은 월요일의 재앙적인 영향에 뒤이어, 우리 경제적으로 약한 입장이 불가리아 농민 연합 회원들과의 협상을 통해 농민들을 대신하여 정부가 개입할 것을 요구하면서 주요 자유당 관리들의 사무실 밖에서 시위를 하고 있는 것으로 보입니다. 이것은 우리에게 더 큰 압력을 가하는 것 뿐만 아니라 국가 내에서의 불화를 확산시켰습니다."
